--- a/FtcRobotController/src/main/res/layout/activity_ftc_controller.xml
+++ b/FtcRobotController/src/main/res/layout/activity_ftc_controller.xml
@@ -191,6 +191,13 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
           opencv:show_fps="true"
           opencv:camera_id="any" />
 
+      <Button
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:text="Grab"
+          android:id="@+id/button3"
+          android:layout_gravity="end|bottom"
+          android:onClick="frameButtonOnClick"/>
 
       <TextView
           android:layout_width="wrap_content"
