--- a/FtcRobotController/src/main/res/layout/activity_ftc_controller.xml
+++ b/FtcRobotController/src/main/res/layout/activity_ftc_controller.xml
@@ -81,12 +81,11 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
       android:layout_centerHorizontal="true"
       android:layout_margin="10dp"/>
 
-    <SeekBar
-        android:id="@+id/seekBar"
-        android:layout_width="228dp"
-        android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_toEndOf="@+id/textDeviceName" />
+      <SeekBar
+          android:id="@+id/seekBar"
+          android:layout_width="197dp"
+          android:layout_height="wrap_content"
+          android:layout_centerInParent="true" />
 
   </RelativeLayout>
   <!-- end of black bar -->
@@ -207,7 +206,7 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:id="@+id/frameLayout">
-      <org.opencv.android.JavaCamera2View
+      <org.opencv.android.JavaCameraView
           android:layout_width="fill_parent"
           android:layout_height="fill_parent"
           android:visibility="gone"
