--- a/FtcRobotController/src/main/res/layout/activity_ftc_controller.xml
+++ b/FtcRobotController/src/main/res/layout/activity_ftc_controller.xml
@@ -81,11 +81,12 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
       android:layout_centerHorizontal="true"
       android:layout_margin="10dp"/>
 
-      <SeekBar
-          android:id="@+id/seekBar"
-          android:layout_width="197dp"
-          android:layout_height="wrap_content"
-          android:layout_centerInParent="true" />
+    <SeekBar
+        android:id="@+id/seekBar"
+        style="@android:style/Widget.DeviceDefault.Light.SeekBar"
+        android:layout_width="197dp"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true" />
 
   </RelativeLayout>
   <!-- end of black bar -->
