--- a/FtcRobotController/src/main/res/layout/activity_ftc_controller.xml
+++ b/FtcRobotController/src/main/res/layout/activity_ftc_controller.xml
@@ -178,34 +178,36 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
       android:text="" />
 
     <FrameLayout
+        android:id="@+id/frameLayout"
         android:layout_width="fill_parent"
         android:layout_height="350dp"
-        android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
-        android:id="@+id/frameLayout">
+        android:layout_alignParentBottom="true"
+        android:visibility="gone">
+
       <org.opencv.android.JavaCamera2View
+          android:id="@+id/show_camera_activity_java_surface_view"
           android:layout_width="fill_parent"
           android:layout_height="fill_parent"
           android:visibility="gone"
-          android:id="@+id/show_camera_activity_java_surface_view"
-          opencv:show_fps="true"
-          opencv:camera_id="any" />
+          opencv:camera_id="any"
+          opencv:show_fps="true" />
 
       <Button
+          android:id="@+id/button3"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
-          android:text="Grab"
-          android:id="@+id/button3"
           android:layout_gravity="end|bottom"
-          android:onClick="frameButtonOnClick"/>
+          android:onClick="frameButtonOnClick"
+          android:text="Grab" />
 
       <TextView
+          android:id="@+id/resultText"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
-          android:textAppearance="?android:attr/textAppearanceSmall"
-          android:text="[RESULT]"
-          android:id="@+id/resultText"
           android:layout_gravity="end|top"
+          android:text="[RESULT]"
+          android:textAppearance="?android:attr/textAppearanceSmall"
           android:textColor="#ff0000" />
 
     </FrameLayout>
