--- a/FtcRobotController/src/main/res/layout/activity_ftc_controller.xml
+++ b/FtcRobotController/src/main/res/layout/activity_ftc_controller.xml
@@ -224,13 +224,14 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:id="@+id/frameLayout">
+
       <org.opencv.android.JavaCameraView
+          android:id="@+id/show_camera_activity_java_surface_view"
           android:layout_width="fill_parent"
           android:layout_height="fill_parent"
           android:visibility="gone"
-          android:id="@+id/show_camera_activity_java_surface_view"
-          opencv:show_fps="true"
-          opencv:camera_id="any" />
+          opencv:camera_id="any"
+          opencv:show_fps="true" />
 
       <Button
           android:layout_width="wrap_content"
